Only remove tokens from images, but not the database

After removing tokens from all images via "Edit|Remove tokens...", they
are no longer available via the ListSelect in the annotation dialog.
Re-adding the token to the tokens category after removing it makes sure
that if remains selectable in the annotation dialog.

BUG: 423978